--- a/src/Components/Footer.scss
+++ b/src/Components/Footer.scss
@@ -5,10 +5,10 @@
   background-color: $color1;
   color: $color4;
   height: auto;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  // position: absolute;
+  // bottom: 0;
+  // left: 0;
+  // right: 0;
   text-align: center;
   padding: 4rem;
 }
