--- a/src/Screens/HomeScreen.scss
+++ b/src/Screens/HomeScreen.scss
@@ -5,6 +5,11 @@
 .charecterCard {
   width: 90%;
   margin: 0 auto;
+  .pagination {
+    display: flex;
+    justify-content: center;
+    padding: 2rem;
+  }
   .cards {
     // width: 100%;
     display: flex;
