--- a/src/Components/Footer.scss
+++ b/src/Components/Footer.scss
@@ -5,8 +5,9 @@
   background-color: $color1;
   color: $color4;
   height: auto;
-  // position: absolute;
-  // bottom: 0;
+  position: relative;
+  bottom: 0;
+  width: 100%;
   // left: 0;
   // right: 0;
   text-align: center;
